--- a/index.html
+++ b/index.html
@@ -61,10 +61,38 @@
                 <img src="./images/products/bag.png" alt="">
                 <div class="product-title-icon">
                     <h2>Product-1</h2>
-                    <div>
+                    <div class="product-icon">
                         <span><i class="fa-solid fa-cart-shopping"></i></span>
-                        <span>2</span>
-                        <span>3</span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ipsam nostrum asperiores architecto recusandae earum odio impedit esse aperiam iusto?</p>
+                <p>Price: $1200</p>
+                <button class="product-btn">BUY</button>
+              </div>  
+              <div class="single-product">
+                <img src="./images/products/bag.png" alt="">
+                <div class="product-title-icon">
+                    <h2>Product-1</h2>
+                    <div class="product-icon">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ipsam nostrum asperiores architecto recusandae earum odio impedit esse aperiam iusto?</p>
+                <p>Price: $1200</p>
+                <button class="product-btn">BUY</button>
+              </div>  
+              <div class="single-product">
+                <img src="./images/products/bag.png" alt="">
+                <div class="product-title-icon">
+                    <h2>Product-1</h2>
+                    <div class="product-icon">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
                     </div>
                 </div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ipsam nostrum asperiores architecto recusandae earum odio impedit esse aperiam iusto?</p>
