fourth section done

--- a/index.html
+++ b/index.html
@@ -99,9 +99,96 @@
                 <p>Price: $1200</p>
                 <button class="product-btn">BUY</button>
               </div>  
+              <div class="single-product">
+                <img src="./images/products/bag.png" alt="">
+                <div class="product-title-icon">
+                    <h2>Product-1</h2>
+                    <div class="product-icon">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ipsam nostrum asperiores architecto recusandae earum odio impedit esse aperiam iusto?</p>
+                <p>Price: $1200</p>
+                <button class="product-btn">BUY</button>
+              </div>  
+              <div class="single-product">
+                <img src="./images/products/bag.png" alt="">
+                <div class="product-title-icon">
+                    <h2>Product-1</h2>
+                    <div class="product-icon">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ipsam nostrum asperiores architecto recusandae earum odio impedit esse aperiam iusto?</p>
+                <p>Price: $1200</p>
+                <button class="product-btn">BUY</button>
+              </div>  
+              <div class="single-product">
+                <img src="./images/products/bag.png" alt="">
+                <div class="product-title-icon">
+                    <h2>Product-1</h2>
+                    <div class="product-icon">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ipsam nostrum asperiores architecto recusandae earum odio impedit esse aperiam iusto?</p>
+                <p>Price: $1200</p>
+                <button class="product-btn">BUY</button>
+              </div>  
             </div>
         </div>
         <!-- product section ends here -->
+
+
+        <!-- Gallery section start here -->
+        <section class="gallery-section">
+            <h1 style="text-align: center; margin: 30px 0;">Simple Gallery</h1>
+            <div class="gallery-container">
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+                <div class="single-gallery">
+                    <img src="./images/products/bag.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Gallery section start here -->
     </main>
     <!-- main end -->
 </body>
